k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yellowhorrorhose-game
  labels:
    app: yellowhorrorhose-game
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: yellowhorrorhose-game
